--- a/notes/lec01_data_prep.Rmd
+++ b/notes/lec01_data_prep.Rmd
@@ -260,7 +260,8 @@ Write your responses in a new Markdown file named *userid_ch3.rmd*.
     - Edit the codebook to add the variable name you choose to use
     for each subscale. 
 
-<span style="color: Red">SOLUTIONS</span> [[HTML]](./solutions/ch3_solutions.html)[[PDF]](./solutions/ch3  _solutions.pdf)
+<span style="color: Red">SOLUTIONS</span> [[HTML]](./solutions/ch3_solutions.html)
+[[RMD]](./solutions/ch3_solutions.Rmd)
 
 
 # Data screening and transformations (_Afifi Ch 4_)
