--- a/Schedule.Rmd
+++ b/Schedule.Rmd
@@ -15,6 +15,9 @@ library(readr)
 source("C:/Github/MATH456/stylesheets/custom.R")
 ```
 
+Helpful Links: [[Home]](index.html) [[HW Rubric]](/admin/rubric.html)  [[Google Group]](https://groups.google.com/forum/#!forum/csuc_stat)  [[Google Drive]](https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&usp=sharing)
+
+
 ```{r include = FALSE}
 rawdat <- read_csv(file.path("admin", "lecture-notes.csv"))
 cdat   <- rawdat %>% mutate(Date = format(as.Date(date, "%m/%d/%Y"), "%m/%d"), 
