--- a/notes/lec02_LinReg.Rmd
+++ b/notes/lec02_LinReg.Rmd
@@ -92,14 +92,14 @@ qplot(y=FFEV1, x=FHEIGHT, geom="point", data=fev, xlab="Height", ylab="FEV1",
 
 There does appear to be a tendency for taller men to have higher FEV1. 
 
-7. Fit a linear model and report the regression parameter estimates. 
+3. Fit a linear model and report the regression parameter estimates. 
 ```{r}
 model <- lm(FFEV1 ~ FHEIGHT, data=fev)
 summary(model)
 ```
 The least squares equation is $Y = -4.087 + 0.118X$.
 
-8. Test for a significant relationship between height and FEV. Include a p-value and 
+4. Test for a significant relationship between height and FEV. Include a p-value and 
 a confidence interval for the parameter estimate in your conclusion. 
 ```{r}
 confint(model)
@@ -107,7 +107,7 @@ confint(model)
 For ever inch taller a father is, his FEV1 measurement significantly increases by .12 (95%CI: .09, .15, p<.0001).  
 The correlation between FEV1 and height is $\sqrt{.2544}$ = 0.5. 
 
-9. Predict the FEV for a 6' and 6'4" male. 
+5. Predict the FEV for a 6' and 6'4" male. 
 ```{r}
 newdata <- data.frame(FHEIGHT=c(60, 64))
 predict(model, newdata, interval="confidence")
@@ -151,10 +151,19 @@ plot(model)
 
 
 
-##### On Your Own: 
+##### On Your Own: Afifi Problem 6.2 (modified). 
 Write your responses in a new Markdown file named *userid_ch6.rmd*.
+Don't forget to use the _analysis_ data set for this problem. 
 
-Problem 6.2, 6.7, 
+1. Perform a regression analysis of weight on height for fathers  
+     a. Determine the correlation coefficient and the regression equation.   
+     b. Interpret the coefficients in context of the problem.   
+2. Test that the coeffcients are signiffcantly different from zero. 
+3. Assess model fit graphically. Comment on any outliers. 
+4. Repeat 1 -3 for mothers.   
+5. Discuss why the correlation for fathers appears higher than that for mothers.
+
+
 
 # Multiple Regression and Correlation (_Afifi Ch 7_)
 
