--- a/notes/lec02_LinReg.Rmd
+++ b/notes/lec02_LinReg.Rmd
@@ -64,7 +64,7 @@ $$ \sigma^{2} = \sigma_{y}^{2}(1-\rho^{2})$$
 $$ \rho^{2} = \frac{\sigma_{y}^{2} - \sigma^{2}}{\sigma_{y}^{2}}$$
 
 * $\rho^{2}$ = reduction in variance of Y associated with knowledge of X/original variance of Y
-* **Coefficient of Determiniation**: $100\rho^{2}$ = % of variance of Y “associated with X” or “explained by X”
+* **Coefficient of Determiniation**: $100\rho^{2}$ = % of variance of Y associated with X or explained by X
 * Caution: association vs. causation.
 
 ### Example: Lung Function
@@ -203,11 +203,86 @@ Don't forget to use the _analysis_ data set for this problem.
 
 
 
-<!-- # Multiple Regression and Correlation (_Afifi Ch 7_)
+# Multiple Regression and Correlation (_Afifi Ch 7_)
+
+## Aims
+* Extend simple linear regression.
+* Describe linear relationship between a single continuous $Y$ variable, 
+  and several $X$ variables.
+* Draw inferences regarding this relationship.
+* Predict $Y$ from $X_{1}, X_{2}, \ldots , X_{P}$.
+
+Now it's no longer a 2D regression _line_, but a $p$ dimensional 
+regression plane. 
+
+![Figure 7.1](regression_plane.png)
+
+## Mathematical Model
+* Mean of $Y$ values at any given $X$ is: $\alpha + \beta_{1}x_{1} + \ldots + \beta_{p}x_{p}$
+* Variance of $Y$ values at any set of values of $X$'s is $\sigma^2$ (same
+  for all X's)
+* $Y$ values are normally distributed at any given $X$ (need for inference)
+
+## Types of X variables
+* Fixed: selected in advance
+* Variable: as in most health science studies
+* X's can be continuous or discrete (categorical)
+* X's can be transformations of other X's, e.g., polynomial regression
+
+### Continued Example: Lung Function
+In Chapter 6 the data for fathers from the lung function data set were 
+analyzed. These data fit the variable-X case. Height was used as the 
+$X$ variable in order to predict `FEV`. 
+```{r}
+model <- lm(FFEV1 ~ FHEIGHT , data=fev)
+summary(model)
+```
+This output shows that height is significantly associated with FEV, 
+specifically as height increases so does FEV (p<.0001). Looking
+at the multiple $R^{2}$ (correlation of determination), this simple
+model explains 25% of the variance seen in the outcome $Y$. 
+
+
+However, FEV tends to decrease with age for adults, so we should be able
+to predict it better if we use both height and age as independent variables
+in a multiple regresison equation. 
+
+First let's see different ways to graphically explore the relationship between
+three characteristics simultaneiously.
+
+#### 3D scatterplots
+```{r}
+library(scatterplot3d)
+scatterplot3d(x=fev$FHEIGHT, y=fev$FAGE, z=fev$FFEV1, 
+              xlab="Height", ylab="Age", zlab="FEV", 
+              main="Relationship between FEV1, height and age for fathers.")
+```
+
+See http://www.statmethods.net/graphs/scatterplot.html for two simple ways to
+create interactive, spinning 3D scatterplots. 
+
+#### Controlling the color, or size of points using the third characteristic
+```{r, fig.width=10}
+library(gridExtra)
+a <- qplot(y=FFEV1, x=FAGE, color=FHEIGHT, data=fev)
+b <- qplot(y=FFEV1, x=FHEIGHT, color=FAGE, size=FAGE, data=fev)
+grid.arrange(a, b, ncol=2)
+```
+
+The scatterplot of FEV against age demonstrates the decreasing trend of
+FEV as age increases, and the increasing trend of FEV as height increases. 
+The third color however is pretty scattered across the plot. There is no
+obvious trend observed.
+
+*  What direction do you expect the slope coefficient for age to be? For height? 
+
+```{r}
+model <- lm(FFEV1 ~ FHEIGHT + FAGE, data=fev)
+summary(model)
+```
 
 
 ##### On Your Own
 Write your responses in a new Markdown file named *userid_ch7.rmd*.
 
--->
 
