--- a/notes/lec02_LinReg.Rmd
+++ b/notes/lec02_LinReg.Rmd
@@ -13,7 +13,7 @@ opts_chunk$set(warning=FALSE, message=FALSE)
 ```
 
 ```{r results="asis", echo=FALSE}
-source("~/Github/MATH456/stylesheets/custom.R")
+source("C:/Github/MATH456/stylesheets/custom.R")
 ```
 
 Navbar: [[Home]](../index.html) [[Schedule]](../Schedule.html) [[Week 3 Overview]](../wk03.html) [[HW Rubric]](../admin/rubric.html)  [[Google Group]](https://groups.google.com/forum/#!forum/csuc_stat)  [[Google Drive]](https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&usp=sharing)
@@ -75,7 +75,7 @@ and run it on your machine to create the analysis data set._
 _Section 6.3_
 1. Read in the analysis data set for the lung function. 
 ```{r}
-fev <- read.delim("~/GitHub/MATH456/data/Lung_020716.txt", sep="\t", header=TRUE)
+fev <- read.delim("C:/GitHub/MATH456/data/Lung_020716.txt", sep="\t", header=TRUE)
 ```
 
 2. Create a scatterplot of FEV versus height for fathers. 
@@ -111,12 +111,12 @@ The correlation between FEV1 and height is $\sqrt{.2544}$ = 0.5.
 
 5. Predict the FEV for a 6' and 6'4" male. 
 ```{r}
-newdata <- data.frame(FHEIGHT=c(60, 64))
+newdata <- data.frame(FHEIGHT=c(72, 76))
 predict(model, newdata, interval="confidence")
 predict(model, newdata, interval="prediction")
 ```
 
-Why didn't I create a prediction for the 5' male? Hint, look at the range of height values below. 
+Why couldn't I create a prediction for a 5' male (60")? Hint, look at the range of height values below. 
 ```{r}
 summary(fev$FHEIGHT)
 ```
@@ -201,7 +201,7 @@ Don't forget to use the _analysis_ data set for this problem.
 4. Repeat 1 -3 for mothers.   
 5. Discuss why the correlation for fathers appears higher than that for mothers.
 
-
+<!---
 
 # Multiple Regression and Correlation (_Afifi Ch 7_)
 
@@ -315,4 +315,4 @@ $$B_{i} = B_{i} \frac{\sigma_{x_{i}}}{\sigma_{Y}}$$
 ##### On Your Own
 Write your responses in a new Markdown file named *userid_ch7.rmd*.
 
-
+-->
